// linq — entity relationship diagram
//
// Paste this file into https://dbdiagram.io/d (or `npx @dbml/cli`) to render it.
// Maintained by hand; the Kysely migrations under apps/server/src/db/migrations/
// remain the source of truth.

Project linq {
  database_type: 'PostgreSQL'
  Note: '''
    A self-hosted URL shortener and dynamic-link service.

    Eight tables in three groups: who acts (api_keys), what is served
    (domains, links, rules, qr_codes), and what happened (visits, and the two
    rollups derived from it).

    Requires PostgreSQL 15+: visit_days and visit_counts use
    UNIQUE NULLS NOT DISTINCT.
  '''
}

// ── Enums ────────────────────────────────────────────────────────────────────

Enum role {
  viewer [note: 'Reads everything.']
  editor [note: 'Also creates and edits any link.']
  admin  [note: 'Also archives, restores and purges links, and manages domains and keys.']
}

Enum resource_status {
  active
  archived [note: 'Soft-deleted. Keeps its rows and, for a link, its slug.']
}

Enum platform {
  android
  ios
  desktop [note: 'Also the fallback for an unknown or absent user agent.']
}

Enum qr_pattern {
  squares
  rounded
  dots
}

Enum visit_dimension {
  total       [note: 'Every visit of the day. What the `day` grouping reads.']
  platform
  os
  browser
  referer
  destination
  slug
}

// ── Identity ─────────────────────────────────────────────────────────────────

Table api_keys {
  id         uuid        [pk]
  name       text        [not null, note: 'Who or what the key is for']
  role       role        [not null]
  key_hash   text        [not null, unique, note: 'sha256 of the secret; the secret itself is shown once and never stored']
  prefix     text        [not null, note: 'First characters of the key, so it is recognisable in a list']
  expires_at timestamptz [note: 'Null never expires']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
    The principal. There are no user rows: a key carries its own name and role,
    so authentication is one row and no join. See docs/adr/0011.

    Revoking a key deletes the row. Links carry no reference to the key that
    created them, so revoking never touches them. See docs/adr/0016.
  '''
}

// ── Routing ──────────────────────────────────────────────────────────────────

Table domains {
  id                          uuid            [pk]
  host                        text            [not null, unique, note: 'Lowercased, optionally carrying a port']
  fallback_url                text            [note: 'Where an unmatched-but-well-formed slug goes. Null means 404 — the common case.']
  base_path_redirect          text            [note: 'Where a bare GET / (empty slug) goes. Null falls back to fallback_url, then 404.']
  invalid_short_url_redirect  text            [note: 'Where a malformed (not just unknown) slug goes. Null falls back to fallback_url, then 404.']
  status                      resource_status [not null, default: 'active']
  created_at                  timestamptz     [not null, default: `now()`]
  updated_at                  timestamptz     [not null, default: `now()`]
}

Table links {
  id            uuid            [pk]
  domain_id     uuid            [not null, note: 'Immutable. ON DELETE restrict: a domain cannot be purged while any link row points at it.']
  slug          text            [not null, note: 'Immutable, and never released except by a purge']
  destination   text            [not null]
  name          text
  description   text            [note: 'Filled from the destination <head> when the request did not supply one. See docs/adr/0014.']
  icon_url      text            [note: 'The destination favicon, resolved to an absolute URL. See docs/adr/0014.']
  forward_query boolean         [not null, default: true, note: 'Merge the incoming query string over the destination']
  preset_params jsonb           [not null, default: `'{}'::jsonb`, note: 'Record<string,string>: set on the destination when forward_query is true, overriding its own query and the forwarded one. At most 20.']
  status        resource_status [not null, default: 'active']
  expires_at    timestamptz     [note: 'Past this, the link resolves like an unknown slug. Null never expires.']
  listed        boolean         [not null, default: false, note: 'Opt-in: listed in the domain public /llms.txt catalogue.']
  created_at    timestamptz     [not null, default: `now()`]
  updated_at    timestamptz     [not null, default: `now()`]

  Indexes {
    (domain_id, slug) [unique, name: 'links_domain_slug_key']
    status            [name: 'links_status_idx']
    domain_id         [name: 'links_listed_idx', note: 'Partial: where listed. Serves the unauthenticated /llms.txt route.']
  }

  Note: '''
    One short link: a slug on a domain. Carries no reference to the key that
    created it — see docs/adr/0016.

    Archiving keeps the row so a dead link cannot be hijacked by a new one;
    only a purge releases the slug. See docs/adr/0002.
  '''
}

Table rules {
  id          uuid    [pk]
  link_id     uuid    [not null]
  position    integer [not null, note: 'Server-owned. Lowest matching position wins.']
  destination text    [not null]
  conditions  jsonb   [not null, note: 'Condition[]: platform | query_param. ANDed; at most 10, and never empty.']

  Indexes {
    (link_id, position) [unique, name: 'rules_link_position_key']
  }

  Note: 'Ordered alternate destinations. At most 50 per link.'
}

Table tags {
  id         uuid        [pk]
  name       text        [not null, unique, note: 'Lowercased and trimmed by the API. At most 50 characters.']
  created_at timestamptz [not null, default: `now()`]

  Note: '''
    Every tag name ever attached to a link. A tag no link carries any more
    stays here but drops out of GET /v1/tags, which counts through link_tags.
    See docs/adr/0020.
  '''
}

Table link_tags {
  link_id uuid [not null]
  tag_id  uuid [not null]

  Indexes {
    (link_id, tag_id) [pk]
    tag_id            [name: 'link_tags_tag_id_idx']
  }

  Note: 'A link carries a tag. At most 20 per link. Unordered: the API returns a link's tags sorted by name.'
}

Table qr_codes {
  id         uuid       [pk]
  link_id    uuid       [not null, note: 'ON DELETE cascade — a QR code cannot outlive its link.']
  name       text
  dot_color  text       [not null, default: '#000000']
  bg_color   text       [not null, default: '#ffffff']
  pattern    qr_pattern [not null, default: 'squares']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    link_id [name: 'qr_codes_link_id_idx']
  }

  Note: '''
    A styled QR code for a link's short URL. The encoded data is never
    stored — always the link's current short URL, resolved at render time —
    so only the styling lives here. Deleted, not archived: see docs/adr/0002's
    2026-09-21 amendment.
  '''
}

// ── Analytics ────────────────────────────────────────────────────────────────

Table visits {
  id             uuid        [pk, note: 'UUIDv7, so it breaks ties in the order visits happened']
  link_id        uuid        [note: 'Null is an orphan visit. ON DELETE cascade, so purging a link destroys its visits.']
  domain_id      uuid        [not null]
  slug_requested text        [not null, note: 'What the caller asked for, empty for the root path']
  occurred_at    timestamptz [not null, default: `now()`]
  is_bot         boolean     [not null, note: 'Decided once at ingest; no user agent at all counts as a bot']
  platform       platform    [not null]
  os             text        [note: 'Open vocabulary (unlike platform), lowercased. Null when it could not be determined.']
  browser        text        [note: 'Open vocabulary (unlike platform), lowercased. Null when it could not be determined.']
  user_agent     text
  referer        text
  referer_host   text        [note: 'Stored generated host extracted from referer; empty for an absent or relative URL.']
  destination    text        [note: 'The URL actually chosen, after rules and query merging']
  query          jsonb       [note: 'Record<string, string[]> of the incoming query, before any merging']

  Indexes {
    (link_id, occurred_at)   [name: 'visits_link_occurred_idx', note: 'occurred_at DESC']
    (domain_id, occurred_at) [name: 'visits_domain_occurred_idx', note: 'occurred_at DESC']
    occurred_at              [name: 'visits_orphan_occurred_idx', note: 'DESC, partial: WHERE link_id IS NULL']
    (occurred_at, is_bot, platform, link_id, domain_id, os, browser, referer_host, slug_requested) [name: 'visits_analytics_idx', note: 'occurred_at DESC. Covering index for filtered analytics.']
  }

  Note: '''
    One row per request. The detail table, and the only source of truth for
    analytics — both rollups below are derived from it by trigger.

    Inserted fire-and-forget: a visit must never delay a redirect.
  '''
}

Table visit_days {
  day       date            [not null, note: 'Cut in UTC, so a report never shifts with the session timezone']
  domain_id uuid            [not null]
  link_id   uuid            [note: 'Null is the orphan scope. No foreign key — see the table note.']
  dimension visit_dimension [not null]
  value     text            [not null, note: 'Empty string where the dimension was not recorded, never a word a real value could collide with']
  is_bot    boolean         [not null]
  count     bigint          [not null, default: 0]

  Indexes {
    (day, domain_id, link_id, dimension, value, is_bot) [unique, name: 'visit_days_key', note: 'NULLS NOT DISTINCT, so the orphan scope upserts onto one row']
    (link_id, dimension, day)                           [name: 'visit_days_link_idx']
    (domain_id, dimension, day)                         [name: 'visit_days_domain_idx']
    (dimension, day)                                    [name: 'visit_days_dimension_day_idx']
  }

  Note: '''
    Pre-counted visits, one row per day, scope, dimension value and bot flag.
    One table serves every grouping the stats API offers. Its referer dimension
    holds a host, not the full referer URL. See docs/adr/0007.

    Derived data: only the triggers in 0001_initial.ts write
    here. An AFTER INSERT trigger on visits increments seven rows per visit.

    link_id deliberately carries NO foreign key. Purging a link merges these
    rows into the orphan scope, and an ON DELETE SET NULL would pre-empt that
    merge and collide on the unique constraint. domain_id does cascade, which
    is what makes purging a domain destroy its rollups with its visits.
  '''
}

Table visit_counts {
  domain_id     uuid        [not null]
  link_id       uuid        [note: 'Null is the orphan scope, one row per domain. No foreign key — see the table note.']
  human         bigint      [not null, default: 0]
  bot           bigint      [not null, default: 0]
  last_visit_at timestamptz

  Indexes {
    (domain_id, link_id) [unique, name: 'visit_counts_key', note: 'NULLS NOT DISTINCT']
    link_id              [name: 'visit_counts_link_idx', note: 'The join every link response makes']
  }

  Note: '''
    All-time totals per scope: one row per link, plus one per domain for its
    orphans. What every link list and overview tile reads instead of
    aggregating the whole visits table.

    Derived data, and link_id carries no foreign key, for the same reasons as
    visit_days above.
  '''
}

// ── Relationships ────────────────────────────────────────────────────────────


Ref: links.domain_id > domains.id [delete: restrict]

Ref: rules.link_id > links.id [delete: cascade]
Ref: qr_codes.link_id > links.id [delete: cascade]
Ref: link_tags.link_id > links.id [delete: cascade]
Ref: link_tags.tag_id  > tags.id  [delete: restrict]

Ref: visits.link_id   > links.id   [delete: cascade]
Ref: visits.domain_id > domains.id [delete: cascade]

Ref: visit_days.domain_id   > domains.id [delete: cascade]
Ref: visit_counts.domain_id > domains.id [delete: cascade]

// visit_days.link_id and visit_counts.link_id point at links.id logically but
// carry no constraint, so no Ref is declared for them — the diagram shows what
// the database actually enforces. The table notes explain why.

// ── Grouping ─────────────────────────────────────────────────────────────────

TableGroup identity [color: #4f6d7a] {
  api_keys
}

TableGroup routing [color: #5c8001] {
  domains
  links
  rules
  qr_codes
}

TableGroup analytics [color: #a14a3a] {
  visits
  visit_days
  visit_counts
}
